fixed bug with nav overlapping

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,7 @@ nav {
     position: sticky;
     position: -webkit-sticky;
     top: 0;
+    z-index: 2;
     display: flex;
     justify-content: center;
     gap: 1em;
